# AppFlowy-LocalAI

./: .env  .gitignore  Cargo.toml  README.md  dev.env
.github/workflows/: integration_test.yaml  lint.yaml  macos_test.yaml
appflowy-local-ai/: Cargo.toml
appflowy-local-ai-chat/: Cargo.toml
appflowy-local-ai-chat/src/: chat_plugin.rs  embedding_plugin.rs  lib.rs  llm_chat.rs
appflowy-local-ai-chat/tests/: util.rs
appflowy-local-ai/src/: ai_ops.rs  chat_ops.rs  chat_plugin.rs  embedding_ops.rs  embedding_plugin.rs  lib.rs  llm_chat.rs  llm_embedding.rs  plugin_request.rs  state.rs
appflowy-local-ai/tests/: main.rs  util.rs
appflowy-local-ai/tests/chat_test/: mod.rs
appflowy-local-ai/tests/embedding_test/: mod.rs
appflowy-plugin/: Cargo.toml
appflowy-plugin/src/: error.rs  lib.rs  manager.rs  util.rs
appflowy-plugin/src/core/: parser.rs  plugin.rs  rpc_loop.rs  rpc_object.rs  rpc_peer.rs
