[workspace]
members = [
  "appflowy-local-ai",
  "appflowy-plugin",
]
resolver = "2"

[workspace.dependencies]
appflowy-plugin = { path = "appflowy-plugin" }
appflowy-local-ai-chat = { path = "appflowy-local-ai" }
parking_lot = "0.12"
tracing = "0.1"
anyhow = "1.0"
serde_json = "1.0"
tokio-stream = "0.1.15"
serde = "1.0"

