[package]
name = "appflowy-local-ai-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6"
anyhow = "1.0"
appflowy-plugin = { workspace = true }
serde_json.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
serde.workspace = true
tokio = { version = "1"}

[features]
verbose = ["appflowy-plugin/verbose"]