[package]
name = "appflowy-local-ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6"
anyhow = "1.0"
appflowy-plugin = { workspace = true }
serde_json.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
serde.workspace = true
tokio = { version = "1" }

[features]
verbose = ["appflowy-plugin/verbose"]


[dev-dependencies]
dotenv = "0.15.0"
uuid = { version = "1.9.1", features = ["v4"] }
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter", "ansi", "json"] }
simsimd = "4.4.0"
tempfile = "3.10.1"
