[package]
name = "appflowy-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.19.0"
thiserror = "1.0"
serde_json.workspace = true
tracing.workspace = true
crossbeam-utils = "0.8.20"
log = "0.4.21"
parking_lot.workspace = true
tokio-stream.workspace = true
cfg-if = "1.0.0"
xattr = "1.3.1"

[features]
verbose = []